[package]
name = "kopi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winrt-notification = "0.5.1"
eframe = "0.16.0"                                                 # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"], optional = true }

[dependencies.windows]
version = "0.30"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_System_SystemServices",
    "Win32_Foundation",
    # "Foundation",
    # "UI_Xaml_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
]
